# sch-lectures

./: .gitignore  README.md
Attendance_sort/: main.py
CV_Summ_2018/W1_setup_opencv/: README.md
Control2_Fall_2018/: 01_MATLAB_basics.md  02_plot.md  03_system_response.md  04_laplace.md  05_root_locus.md  06_example_6-10.md  e02_plot_A.m  e02_plot_B.m  e02_plot_C.m  e03_sys_response_A.m  e03_sys_response_B.m  e03_sys_response_C.m  e03_sys_response_D.m  e04_laplace_A.m  e04_laplace_B.m  e05_rlocus_A.m  e05_rlocus_B.m  e05_rlocus_C.m  example_6_10.m  example_6_11.m  example_6_6.m  example_6_7.m  rlocus_perf_lines.m
Control2_Fall_2019/: chap8_examples.mlx  mt1_basic.mlx  mt2_plot.mlx  mt3_tf.mlx  mt4_rlocus.mlx  mt4_supp.m  rlocus_perf_lines.m  root_locus.m
Control2_Fall_2019/midterm/: p1_performance_area.m  p3_rlocus.m  p4_p_control.m  p5_pid_control.m
Control2_Fall_2020/: hw3_example.mlx  mt1_basic.mlx  mt2_plot.mlx  mt4_rlocus.mlx  mt4_rlocus_examples.mlx  mt5_rlocus_auto.mlx  mt6_pid_design.mlx  mt7_bode_plot.mlx  rise_time_plot.mlx  simulink_pid_design.slx  test1.m  test_plot.m
Control2_Fall_2020/exam/: draw_splane.m  p1_performance_area.m  p2_check_on_rlocus.m  p3_rlocus.m  p4_p_control.m  p5_pid_control.m  p6_bode_plot.m
Control2_Fall_2020/midterm/: draw_splane.m  p0_calc_performance.m  p3_rlocus.m  p5_pid_control.m
Control2_Fall_2021/: chap8_examples.mlx  mt1_basic.mlx  mt3_tf.mlx  mt6_pid_design.mlx  mt7_bode_plot.mlx  read_simulink_result.m  rlocus_perf_lines.m  root_locus.m  simulink_pid_design.slx  simulink_pid_design.slxc
CppAlgorithm_2021/hw1/: CMakeLists.txt  hw1.md  main.cpp  matrix.h
LinearSyst_Fall_2018/: ch05_eg1.m
LinearSyst_Fall_2019/: midterm.m  midterm_5.m
Robotics/: .gitignore
Robotics/2018/cpp/cpp06_cmake_basic/: CMakeLists.txt  bar.cpp  bar.h  foo.h  main.cpp
Robotics/2018/linux-basic/: 01_LinuxCommands.md  02_PackageManagement.md
Robotics/2018/matlab/: rigid_transform.m  rigid_transform_exam.m
Robotics/2018/ros/: create_ros_package.md  import_rosws_qtcreator.md  ros_command.md  ros_msg_abstract.md
Robotics/2018/ros-pkg-samples/: link_sources.sh
Robotics/2018/ros-pkg-samples/ros_tutorials_topic/: CMakeLists.txt
Robotics/2018/ros-pkg-samples/turtle_control/: CMakeLists.txt  CMakeLists_generated.txt
Robotics/2018/ros-pkg-samples/turtle_control/src/: turtle_control_pub.cpp  turtle_control_sub.cpp
Robotics/2019/: install_ros_melodic.sh
Robotics/2019/HW1/: HW1.py
Robotics/2022/: eval_midterm.py  executers.py  midterm_correct_answer.py  rename_files.py  test_midterm.py
Robotics_Fall_2018/cpp/cpp02_classbasic/: exampledog.cpp
Robotics_Fall_2018/cpp/cpp03_oop_template/: main.cpp
Robotics_Fall_2018/cpp/cpp03_whyuseclass/: objectbasedcode.h
Robotics_Fall_2018/cpp/cpp04_1_oop_new/: main.cpp
Robotics_Fall_2018/cpp/cpp04_objectoriented/: main.cpp
Robotics_Fall_2018/cpp/cpp04_oop_strategy/: main.cpp
Robotics_Fall_2018/cpp/cpp05_more_cpp/: conststatic.h  cpp05_more_cpp.pro  main.cpp  namespace.h  stlvector.h
Robotics_Fall_2018/cpp/cpp06_cmake_basic/: Makefile  foo.cpp
Robotics_Fall_2018/cpp/cpp07_cmake_library/: CMakeLists.txt
Robotics_Fall_2018/linux-basic/: 00_LinuxInstallation.md
Robotics_Fall_2018/matlab/: lidar_example.m  rigid_transform_eg.m  transform_sensorpt.m
Robotics_Fall_2018/ros/: import_rosws_qtcreator.md  ros_setup.md
Robotics_Fall_2018/ros-pkg-samples/build-self_drive-Default/: self_drive.cbp
Robotics_Fall_2018/ros-pkg-samples/ros_tutorials_service/: CMakeLists.txt  package.xml
Robotics_Fall_2018/ros-pkg-samples/ros_tutorials_service/src/: service_server.cpp
Robotics_Fall_2018/ros-pkg-samples/ros_tutorials_topic/: CMakeLists.txt  package.xml
Robotics_Fall_2018/ros-pkg-samples/ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
Robotics_Fall_2018/ros-pkg-samples/self_drive/: CMakeLists.txt
Robotics_Fall_2018/ros-pkg-samples/self_drive/include/self_drive/: tb3driver.h
Robotics_Fall_2018/ros-pkg-samples/self_drive/src/: self_drive.cpp  tb3driver.cpp
Robotics_Fall_2018/ros-pkg-samples/turtle_control/: CMakeLists.txt  package.xml
Robotics_Fall_2019/HW1/: HW1.py
Robotics_Fall_2019/HW1/matrix/: dense_matrix.py
Robotics_Fall_2019/hello_ros/: CMakeLists.txt
Robotics_Fall_2019/matrix/: sparse_matrix.py
Robotics_Fall_2019/ros_tutorial/hello_ros/: package.xml
Robotics_Fall_2019/ros_tutorial/hello_ros/src/: hello_ros_node.cpp
Robotics_Fall_2019/ros_tutorial/image_topic_py3/: CMakeLists.txt
Robotics_Fall_2019/ros_tutorial/self_drive/: CMakeLists.txt  package.xml
Robotics_Fall_2019/ros_tutorial/service_custom/: CMakeLists.txt
Robotics_Fall_2019/ros_tutorial/topic_simple/: CMakeLists.txt
Robotics_Fall_2019/transform/: transform.m
Robotics_Fall_2020/HW1/: dbms.py  main.py  test.py
SLAM_Fall_2018/S.Choi_3DV_src/: bundle_adjustment.cpp  camera_calibration.cpp  distortion_correction.cpp  image_formation.cpp  image_stitching.cpp  opencv_all.hpp  perspective_correction.cpp  pose_estimation.cpp  ransac_line.cpp  triangulation.cpp  video_stabilization.cpp  visual_odometry_epipolar.cpp
SystProg_Spri_2019/: README.md
SystProg_Spri_2019/scripts/: Pipfile  README.md
SystProg_Spri_2019/scripts/basic/: eg01_number.py  eg02_string.py  eg03_list.py  eg04_dict.py  eg05_control.py  eg06_function.py  eg06_function_new.py  eg07_good_python_new.py  eg08_fileio.py  eg11_numpy_usage.py
SystProg_Spri_2019/scripts/opencv/: opencv_01.py  opencv_02_video_simple.py  opencv_04_pixel_op.py  opencv_05_shape.py  opencv_06_callback.py  opencv_07_color_space.py  opencv_08_thresold_sample.py  opencv_10_threshold_adv.py  opencv_11_blur.py  opencv_12_edges.py  opencv_13_morphology.py  opencv_14_hough.py  opencv_17_watershed.py  (+3 more)
SystemProgram/2020/: help.py
SystemProgram/2021/: table.py
SystemProgram/2022/: midterm_correct_answer.py  test_midterm.py
SystemProgram/lecture/: README.md
SystemProgram/scripts/: Pipfile
Vision3D/: how-to-build
Vision3D/DescriptorMatcher/: CMakeLists.txt  descriptormatcher.h
Vision3D/MatchFeatures/: CMakeLists.txt  feature.hpp  main.cpp
(+107 files in other folders)
